kustomize/escalation/overlays/letsencrypt/jira-listener-patch.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: jira-listener
  annotations:
    serving.knative.openshift.io/disableRoute: "true"
